# GaussianVI

./: .gitignore  CMakeLists.txt  CommonDefinitions.h  DataRecorder.h  EigenWrapper.h  GVI-GH-impl.h  GVI-GH.h  GVIFactorizedBase.h  GVIFactorizedFixedGaussian.h  GVIFactorizedGH.h  GVIFactorizedLinear.h  GVIFactorizedNonlinerGH.h  GVIFactorizedOneFactorGH.h  GVIFactorizedSimpleGH.h  GaussHermite.h  MatrixHelper.h  README.md
data/1d/: Sk_sdf.csv  cost.csv  costmap.csv  cov.csv  factor_costs.csv  joint_cov.csv  joint_precision.csv  mean.csv  precision.csv  zk_sdf.csv
data/1d_proxKL/: Sk_sdf.csv  cost.csv  costmap.csv  cov.csv  factor_costs.csv  joint_cov.csv  joint_precision.csv  mean.csv  precision.csv  zk_sdf.csv
data/1d_proxgvi/: Sk_sdf.csv  cost.csv  cov.csv  factor_costs.csv  joint_cov.csv  joint_precision.csv  mean.csv  precision.csv  zk_sdf.csv
gp/: LTV_prior.h  cost_functions.h  cost_functions_LTV.h  cost_functions_integral.h  factorized_opts_LTV.h  factorized_opts_linear.h  factorized_opts_linear_Cuda.h  factorized_opts_linear_prox.h  fixed_prior.h  fixed_prior_proxkl.h  linear_factor.h  minimum_acc_prior.h  minimum_acc_prior_integral.h  minimum_acc_prior_proxkl.h  quadrotor_prior.h
gvibase/: CMakeLists copy.txt  GVI-GH-Cuda-impl.h  GVI-GH-Cuda.h  GVI-GH-GBP-impl.h  GVI-GH-GBP.h  GVI-GH-impl.h  GVI-GH.h  GVIFactorizedBase.h  GVIFactorizedBaseGH.h  GVIFactorizedBaseGH_Cuda.h  GVIFactorizedBase_Cuda.h  GVIFactorizedFixedGaussian.h  GVIFactorizedLinearBase.h  GVIFactorizedNonLinearBase.h
helpers/: CommonDefinitions.h  CudaOperation.cu  CudaOperation.h  DataRecorder.h  EigenWrapper.h  MatrixHelper.h  MatrixMultiplication.cu  MatrixMultiplication.cuh  MatrixMultiplication.h  Serialization.h  SerializeEigen.h  SerializeEigenMaps.h  test_serialization.h
ngd/: CMakeLists.txt  GVIFactorizedBaseNGD.h  GVIFactorizedOneFactorGH.h  NGD-GH-Cuda-impl.h  NGD-GH-Cuda.h  NGD-GH-impl.h  NGD-GH.h  NGDFactorizedBase.h  NGDFactorizedBaseGH.h  NGDFactorizedBaseGH_3dpR.h  NGDFactorizedBaseGH_Cuda.h  NGDFactorizedBaseGH_No_Template.h  NGDFactorizedBaseGH_Quadrotor.h  NGDFactorizedFixedGaussian.h  NGDFactorizedGH.h  NGDFactorizedLinear.h  NGDFactorizedLinearGH.h  NGDFactorizedLinearGH_Cuda.h  NGDFactorizedLinear_Cuda.h  NGDFactorizedNonlinerGH.h  NGDFactorizedSimpleGH.h  NGDFactorizedSimpleGH_Cuda.h  NGDGVIFactorizedBaseGH.h
proxKL/: CMakeLists.txt  ProxKL-GH-Cuda-impl.h  ProxKL-GH-Cuda.h  ProxKL-GH-impl.h  ProxKL-GH.h  ProxKLFactorizedBaseGH.h  ProxKLFactorizedBaseGH_Cuda.h  ProxKLFactorizedSimpleGH.h
proxgd/: CMakeLists.txt  ProxGVI-GH-impl.h  ProxGVI-GH.h  ProxGVIFactorizedBase.h  ProxGVIFactorizedBaseGH.h  ProxGVIFactorizedLinear.h  ProxGVIFactorizedSimpleGH.h
quadrature/: CMakeLists.txt  GaussHermite-impl.h  GaussHermite.h  README.md  SparseGHQuadratureWeights.h  SparseGaussHermite.h  SparseGaussHermite_Cuda.h  SparseGaussHermite_MKL.h  generateSpGHWeights.h  saveSparseGHWeightMap.h  saveSparseGHWeightMap_cereal.h
quadrature/GH/: GaussHermiteN.m  Gaussian_cubature.m  compare_sparseGH.asv  compare_sparseGH.m
quadrature/SparseGH/: addmatrix.m  libSpGH.prj  nwSpGr_demo.asv
quadrature/SparseGH/libSpGH/: PackagingLog.html
quadrature/SparseGH/libSpGH/for_testing/: libSpGH.exports  readme.txt
quadrature/libSpGH/for_redistribution_files_only/: GettingStarted.html  libSpGH.h  run_driver.sh
quadrature/libSpGH/for_redistribution_files_only/v2/generic_interface/: readme.txt
quadrature/libSpGH/for_testing/: libSpGH.cpp
quadrature/libSpGH/for_testing/v2/generic_interface/: libSpGH.ctf
scripts/: README.md  plot1dexample.ipynb
src/: 1d_example.cpp  1d_example_proxGVI.cpp  1d_example_proxKL.cpp  GBP.cpp  cuda_example.cpp  generate_sigmapts.cpp  one_dim_experiment.m  save_SparseGH_weights.cpp  save_SparseGH_weights_MKL.cpp  save_cereal_SparseGH_weights.cpp  spgh_example.cpp
src_MKL/: benchmark_MKL.cpp  benchmark_gh_mkl.cpp  gvimp_mkl.h  test_MKL.cpp  test_gh_mkl.cpp
tests/: test_GH.cpp  test_gh_spgh.cpp  test_save_iterdata.cpp  test_spgh_table_IO.cpp
